slerm/practice/6.network-abstractions/2.ingress-and-services/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-app
  type: ClusterIP  # actual is default
