slerm/practice/6.network-abstractions/2.ingress-and-services/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-nginx
  # also can use annotation
spec:
  rules:
  - host: my.s<свой номер логина>.mcs.slurm.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-service
            port:
              number: 80
